change firstname to name and remove lastname
